--- a/css.css
+++ b/css.css
@@ -1,80 +1,188 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
-
-:root {
-  --azzurrochiaro: 222, 83%, 98%;
-  --blu: 230, 54%, 27%;
-  --bluchiaro: 249, 100%, 51%;
-  --grigioblu: 236, 19%, 52%;
-  --verde: 164, 77%, 55%;
-  --rosso: 350, 75%, 50%;
-  --azzurro: 198, 100%, 68%;
-  --opacity: 0.5;
+.barralaterale {
+  width: fit-content;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-body,
-html {
-  margin: 0;
-  padding: 0;
-  background-color: var(--azzurrochiaro);
-  font-family: Ubuntu;
-  font-weight: 400;
+.listalaterale {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+  margin-top: 1.9rem;
+  position: relative;
 }
 
-* {
-  padding: 0;
-  margin: 0;
+.piccolo {
+  font-size: 1.35rem;
 }
 
-h1 {
-  color: hsl(var(--blu));
-  font-weight: 600;
+.menu {
+  margin-bottom: 4rem;
 }
 
-h2 {
-  color: hsl(var(--grigioblu));
-  font-weight: 500;
+.svg {
+  fill: hsl(var(--bluchiaro));
 }
 
-.btn {
-  border: none;
-  color: white;
-  padding: 0.8rem 1.5rem;
-  border-radius: 7px;
-  font-weight: 600;
-}
-
-.primario {
+.piccolo::after {
+  height: 100%;
   background-color: hsl(var(--bluchiaro));
+  width: 4px;
+  content: "";
+  right: calc(var(--paddingrett) * -1);
+  border-radius: 2px;
+  position: absolute;
+  transform: scaleY(0);
+  transition: transform 0.4s ease;
+}
+.piccolo:hover::after {
+  transform: scaleY(1);
 }
 
-.primario:hover {
+.dashboardtext {
+  display: flex;
+  flex-direction: column;
+}
+
+.megacontainer {
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+
+.centro {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.partesopra {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+.account {
+  width: 20rem;
+  height: 2rem;
+  border-radius: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.input {
+  border-radius: 100px;
+  background-color: hsl(var(--azzurrochiaro), var(--opacity));
+  border: none;
+  padding: 0.2rem;
+  height: 90%;
+}
+
+.svginput {
+  vertical-align: middle;
+}
+
+.inputIn {
+  border: none;
   background-color: transparent;
-  outline: hsl(var(--bluchiaro)) 2px solid;
-  color: hsl(var(--bluchiaro));
+  width: max-content;
+  height: 100%;
+  outline: none;
 }
 
-.secondario {
-  background-color: hsl(var(--grigioblu));
-}
-
-.secondario:hover {
-  background-color: transparent;
-  outline: hsl(var(--grigioblu)) 2px solid;
+.input::placeholder {
   color: hsl(var(--grigioblu));
 }
 
-.terziario {
-  background-color: hsl(var(--rosso));
+.recenti {
+  max-width: 1000px;
+  width: 100%;
+  height: 20rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.terziario:hover {
-  background-color: transparent;
-  outline: hsl(var(--rosso)) 2px solid;
+.crea {
+  max-width: fit-content;
+  height: fit-content;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.img {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 100px;
+  object-fit: cover;
+}
+
+.containerinfo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.tabelladash {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+}
+
+.containerrecenti {
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+
+.imgcrea {
+  width: 10rem;
+  height: 10rem;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.titolocrea {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.inputimg {
+  background-color: hsl(var(--azzurrochiaro), var(--opacity));
+  padding: 0.5rem;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+}
+
+.imgcontainer {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.creabtn {
+  max-height: 50%;
+}
+
+.positivo {
+  color: hsl(var(--verde));
+  text-align: end;
+}
+
+.negativo {
   color: hsl(var(--rosso));
+  text-align: end;
 }
 
-.rettangolo {
-  background-color: white;
-  padding: 1rem;
-  border-radius: 7px;
+.ore {
+  text-align: center;
 }
